crates/tui/tests/snapshots/render_snapshots__cost_metrics_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 524
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Sto Too Fil Obj Str Art
                                                                   │
❯ You                                                              │  1. prompt "show cost" •
▌ show cost                                                        │
                                                                   │
◆ PRISM                                                            │
  Cost report ready.                                               │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend  cost: $0.0500     Ctrl-C quit        │
