crates/tui/tests/snapshots/render_snapshots__empty_launch_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session    0 tools    Ctrl-P · ?                      │ Workspace
                                                                   │ [Act] Too Fil Obj Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: —   [INPUT]    Ctrl-C quit                         │
