crates/tui/tests/snapshots/render_snapshots__form_pane_all_field_kinds_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Activity] Tools Files Objects
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                  ┌ Deep research ───────────────────────────────────────────────┐
                  │                                                              │
                  │  ▸ Question          type…                                   │
                  │    Depth             ‹ 1 ›  (0–5)  0 = local-only · 1+ = web │
                  │    Knowledge Graph   [x] on                                  │
                  │    Mesh/partner data [ ] off  (advisory)                     │
                  │    Transport         ‹ stdio ›                               │
                  │                                                              │
                  │  ↑↓ move · Space/←→ adjust · ↵ launch · Esc                  │
                  └──────────────────────────────────────────────────────────────┘
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
