crates/tui/tests/snapshots/render_snapshots__gh_panel_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
┌ GitHub — Issues ───────────────────────────────────────────────┐ │ [Act] Sto Too Fil Obj Str Art
│ [Issues]  PRs  Status    ◆ Darth-Hidious/PRISM                 │ │
│> type to filter…    (2 shown)                                  │ │  (no activity yet)
│                                                                │ │
│  #42    TUI crashes on startup  OPEN · alice · bug  ◀          │ │
│  #7     Add dark mode  CLOSED · bob                            │ │
│                                                                │ │
│  ←/→ tabs · filter · j/k move · ↵ post link · Esc close        │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [INPUT]    Ctrl-C quit           │
