crates/tui/tests/snapshots/render_snapshots__goal_form_typed_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    99 tools    Ctrl-P · ?    │ Workspace
· PRISM ready — 99 tools available                                 │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                  ┌ Set goal ────────────────────────────────────────────────────┐
                  │                                                              │
                  │  ▸ Standing goal     map the NiTi phase diagram  sent to the │
                  │agent each turn; empty clears                                 │
                  │                                                              │
                  └──────────────────────────────────────────────────────────────┘
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ─────────────────────────────────────────────────────────┐│
│ Type a message... (Enter=send, /help, Ctrl-C=quit)              ││
│                                                                 ││
│                                                                 ││
└─────────────────────────────────────────────────────────────────┘│
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
