crates/tui/tests/snapshots/render_snapshots__gpu_picker_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
┌ Procure GPU compute ───────────────────────────────────────────┐ │ [Act] Sto Too Fil Obj Str Art
│   GPU                   VRAM  Region    Provider         $/hr  │ │
│                                                                │ │  (no activity yet)
│ ● RTX-4090             24 GB  US        runpod       $0.44/hr  │ │
│ ● L40S                 48 GB  EU        datacrunch   $0.89/hr  │ │
│ ● A100-80GB            80 GB  US        runpod       $1.64/hr  │ │
│ ● H100-SXM5            80 GB  EU        datacrunch   $2.19/hr  │ │
│ ○ B200                192 GB  US        nebius       $4.80/hr  │ │
│                                                                │ │
│  ↑↓ · ↵ use · Esc                                              │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready     model: fake-backend   [INPUT]    Ctrl-C quit           │
