crates/tui/tests/snapshots/render_snapshots__home_launch_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 107
expression: rendered
---
 ‹ back  New session    Ctrl-P · ?                                 │ Workspace
┌ PRISM · materials research workspace ──────────────────────────┐ │ [Act] Too Fil Obj Str Art
│                                                                │ │
│  WORKFLOWS                                                     │ │  (no activity yet)
│     no live run list wired yet — talk to the agent to start one│ │
│                                                                │ │
│  TOOLS                                                         │ │
│     loading tool catalog…                                      │ │
│                                                                │ │
│  NOTEBOOKS                                                     │ │
│     /notebook open — Python cells; agent shares kernel         │ │
│                                                                │ │
│  SYSTEMS                                                       │ │
│   ● model  —   s status                                        │ │
│   ● session cost  $0.0000   as of last checkpoint              │ │
│     credits  not reported (unauthed / not fetched)             │ │
│     compute · nodes · knowledge · ingestion — open via ⌘K      │ │
│                                                                │ │
│  ⏎ talk to the agent    t tools    s systems    ⌘K commands    │ │
│? keys                                                          │ │
│                                                                │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│ Type a message... (Enter=send, /help, Ctrl-C=quit)             │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: —   [INPUT]    Ctrl-C quit                         │
