crates/tui/tests/snapshots/render_snapshots__knowledge_search_tab_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1789
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │
                                                                   │  (no activity yet)
                                                                   │
              ┌ Knowledge ───────────────────────────────────────────────────────────┐
              │ [Search]  Ingest                                                     │
              │                                                                      │
              │  ▸ Query             gamma-TiAl oxidation                            │
              │    Literature        [x] on                                          │
              │    Knowledge Graph   [x] on                                          │
              │                                                                      │
              │  Tab mode · ↑↓ move · Space toggle · ↵ search · Esc close            │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
              │                                                                      │
┌ Prompt ─────│                                                                      │
│ Type a messa└──────────────────────────────────────────────────────────────────────┘
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [INPUT]    Ctrl-C quit              │
