crates/tui/tests/snapshots/render_snapshots__link_picker_confirm_100x30.snap
---
source: crates/tui/tests/render_snapshots.rs
assertion_line: 1329
expression: rendered
---
 ‹ back  New session   ◆ fake-backend    Ctrl-P · ?                │ Workspace
· PRISM ready                                                      │ [Act] Too Fil Obj Str Art
                                                                   │
◆ PRISM                                                            │  (no activity yet)
  source: https://example.org/paper                                │
                                                                   │
                                                                   │
                                                                   │
 ┌ Open link ───────────────────────────────────────────────────┐  │
 │                                                              │  │
 │  Do you want to go to this website?                          │  │
 │                                                              │  │
 │  https://example.org/paper                                   │  │
 │                                                              │  │
 │  [y/↵] Show URL for manual opening   [n/Esc] Cancel          │  │
 └──────────────────────────────────────────────────────────────┘  │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
                                                                   │
┌ Prompt ────────────────────────────────────────────────────────┐ │
│type a message…  (press i to focus · ↵ send)                    │ │
│                                                                │ │
│                                                                │ │
└────────────────────────────────────────────────────────────────┘ │
  Ready  model: fake-backend   [CHAT]    Ctrl-C quit               │
